# Robotics

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE  README
bench/: CMakeLists.txt
data/: obstacles.csv  obstacles_original.csv
include/: Robotics.hpp
scripts/cmake/: config.cmake
scripts/cmake/3p/: googlebenchmark.cmake  googletest.cmake
scripts/cmake/presets/: clang-18.json  clang.json  common.json  default.json  gcc-13.json  gcc.json
scripts/cmake/project/: compiler.cmake  git-hash.cmake  global.cmake  pch.cmake
scripts/cmake/rules/: benchmark.cmake  compile-commands.cmake  coverage.cmake  doxygen.cmake
src/: CMakeLists.txt  dwa.cpp  dwa_local.cpp  dynamic_window_approach.cpp
src/include/: config.hpp  dynamic_window_approach.hpp
test/: CMakeLists.txt  function.cpp
